load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Player",
    tags = ["manual"],
    top_level_targets = [
        top_level_target("//ios/demo:PlayerUIDemo", target_environments = ["simulator"]),
        "//ios/core:PlayerUITests",
        "//ios/logger:PlayerUILoggerTests"
    ],
)
