load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Player",
    tags = ["manual"],
    top_level_targets = [
        top_level_target("//ios/demo:PlayerUIDemo", target_environments = ["simulator"]),
        "//ios/core:PlayerUITests",
        "//ios/logger:PlayerUILoggerTests",
        "//ios/swiftui:PlayerUISwiftUITests",
        "//ios/swiftui:PlayerUISwiftUIViewInspectorTests",

        # plugins
        "//plugins/beacon/ios:PlayerUIBaseBeaconPluginTests",
        "//plugins/beacon/swiftui:PlayerUIBeaconPluginViewInspectorTests",

        "//plugins/check-path/ios:PlayerUICheckPathPluginTests",
        "//plugins/check-path/swiftui:PlayerUISwiftUICheckPathPluginViewInspectorTests",

        "//plugins/common-expressions/ios:PlayerUICommonExpressionsPluginTests",

        "//plugins/common-types/ios:PlayerUICommonTypesPluginTests",
        
        "//plugins/computed-properties/ios:PlayerUIComputedPropertiesPluginTests",

        "//plugins/console-logger/ios:PlayerUIPrintLoggerPluginTests",

        "//plugins/expression/ios:PlayerUIExpressionPluginTests",

        "//plugins/external-action/ios:PlayerUIExternalActionPluginTests",
        "//plugins/external-action/swiftui:PlayerUIExternalActionViewModifierPluginViewInspectorTests",

        "//plugins/metrics/swiftui:PlayerUIMetricsPluginViewInspectorTests",

        "//plugins/pending-transaction/swiftui:PlayerUISwiftUIPendingTransactionPluginViewInspectorTests",

        "//plugins/pubsub/ios:PlayerUIPubSubPluginTests",

        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssetsViewInspectorTests",

        "//plugins/transition/swiftui:PlayerUITransitionPluginViewInspectorTests",
        "//plugins/types-provider/ios:PlayerUITypesProviderPluginTests"
    ],
)
