load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework", "ios_application")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle", "apple_resource_group")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

swift_library(
    name = "PlayerUILogger",
    module_name = "PlayerUILogger",
    srcs = glob(["Sources/logger/**/*.swift"]),
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_hooks//:Sources_SwiftHooks"]
)

ios_framework(
    name = "DynTest",
    deps = [":PlayerUI"],
    bundle_id = "com.intuit.playerui",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"],
)

apple_resource_bundle(
    name = "PlayerUIResourceBundle",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = [
        "//newios/Sources/core/Resources:PlayerUICoreResources"
    ]
)

swift_library(
    name = "PlayerUI",
    module_name = "PlayerUI",
    srcs = glob(["Sources/core/**/*.swift"]),
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_hooks//:Sources_SwiftHooks", ":PlayerUILogger"],
    # data = ["//newios/Sources/core/Resources:PlayerUICoreResources"],
    data = [":PlayerUIResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

swift_library(
    name = "PlayerUIInternalTestUtilities",
    module_name = "PlayerUIInternalTestUtilities",
    srcs = glob(["Sources/internal-test-utils/**/*.swift"]),
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":PlayerUI", ":PlayerUILogger"]
)

ios_unit_test(
    name = "PlayerUILoggerTests",
    srcs = glob(["Tests/logger/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUILogger"],
    visibility = ["//visibility:public"],
)

ios_unit_test(
    name = "PlayerUITests",
    # srcs = glob(["Tests/core/**/*.swift"]),
    srcs = glob(["Tests/core/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUI", ":PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)

swift_library(
    name = "PlayerUIDemoSources",
    srcs = glob(["Sources/demo/**/*.swift"]),
    deps = [":PlayerUI", ":PlayerUILogger"]
)

ios_application(
    name = "PlayerUIDemo",
    bundle_id = "com.intuit.ios.player",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"],
    deps = [":PlayerUIDemoSources"],
)

xcodeproj(
    name = "xcodeproj",
    project_name = "Player",
    # tags = ["manual"],
    top_level_targets = [
        # ":DynTest",
        top_level_target(":PlayerUIDemo", target_environments = ["simulator"]),
        ":PlayerUILoggerTests",
        ":PlayerUITests"
    ],
)
