load("@rules_player//ios:defs.bzl", "ios_pipeline")

ios_pipeline(
    name = "PlayerUI",
    resources = [
        "//core/player:player_native_bundle",
        "//core/partial-match-registry:partial-match-registry_native_bundle",
        "//plugins/partial-match-fingerprint/core:core_native_bundle"
    ],
    deps = ["@swiftpkg_swift_hooks//:SwiftHooks", "//apple/logger:PlayerUILogger"],
    test_deps = ["//apple/test-utils-core:PlayerUITestUtilitiesCore", "//apple/internal-test-utils:PlayerUIInternalTestUtilities"],
    hasUnitTests = True,
    hasViewInspectorTests = False,
    test_host = "//apple/demo:PlayerUIDemo"
)