load("@rules_player//ios:defs.bzl", "swift_library")

swift_library(
    name = "PlayerUIInternalTestUtilities",
    module_name = "PlayerUIInternalTestUtilities",
    srcs = glob(["Sources/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = ["//apple/core:PlayerUI", "//apple/logger:PlayerUILogger"]
)