load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUIResourceBundle",
    bundle_name = "PlayerUI",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = glob(["Resources/**/*"])
)

ios_bundle_module_shim("PlayerUI")

swift_library(
    name = "PlayerUI",
    module_name = "PlayerUI",
    srcs = glob(["Sources/**/*.swift"]) + [":PlayerUIResourceShim"],
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_hooks//:Sources_SwiftHooks", "//ios/logger:PlayerUILogger"],
    data = [":PlayerUIResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUITests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUI", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)