load("//tools/ios:util.bzl", "ios_pipeline")

ios_pipeline(
    name = "PlayerUISwiftUI",
    resources = [],
    deps = [
        "@swiftpkg_swift_hooks//:Sources_SwiftHooks",
        "//ios/core:PlayerUI"
    ],
    test_deps = [
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    hasUnitTests = True,
    hasViewInspectorTests = True
)